Fix alignment on index.ejs

--- a/styles/index.css
+++ b/styles/index.css
@@ -26,7 +26,7 @@
   background: rgba(0, 0, 0, 0.60);
   color: #f1f1f1;
   width: 100%;
-  padding: 100px;
+  padding: 50px;
 }
 
 #innerBox {
